{
    "name": "toque",
    "maps": [
        {
            "name": "touch",
            "id": "74e38592-9caa-4a4c-872b-e50101bb843f",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "de09fa0a-f05b-466a-896c-f25c50dc1f9c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "46227f6a-1c5a-4190-b03e-477f33e18104",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "apertar",
                    "type": "Button",
                    "id": "356225bd-1ee7-4a39-b43b-e5faa6a0ec0a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "10249cac-15a4-4bd2-94d6-56c0cc223d7e",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "589c1c90-9fdf-467a-bdeb-b1f5067ed40d",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f0d6b52-2b02-427b-a029-144b91d64c3a",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "apertar",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}